<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Tourism</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_results">Resultados da busca</string>

    <array name="open_now">
        <item>"Open now"</item>
        <item>"Closed"</item>
    </array>

    <string name="details">Place details</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="wait_dialog">Aguarde um instante enquanto estamos a procurar a sua informação...</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_coordinates">Get My Coordinates</string>
    <string name="address_input">Address or Key words</string>

    <string name="get_info_from_coordinates">Search Places</string>
    <string name="get_info_from_address">Search places from address or key words</string>
    <string name="radius_label">Radius: </string>

    <array name="google_types">
        <item>Restaurant</item>
        <item>Art Gallery</item>
        <item>Bar</item>
        <item>Cafe</item>
        <item>Establishment</item>
        <item>Food</item>
        <item>Airport</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Hotel</item>
    </array>
    
    <string name="least_type">Choice at least one type!</string>
    <string name="order_by_ranking">Order by rating</string>
</resources>
