<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity$PlaceholderFragment"
    android:padding="20dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"></LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coordinates_input">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                android:layout_weight="1"
                app:floatingLabel="normal"
                app:floatingLabelText="@string/latitude"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:id="@+id/latitude_input" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:layout_weight="1"
                app:floatingLabel="normal"
                app:floatingLabelText="@string/longitude"
                android:layout_marginLeft="10dp"
                android:inputType="numberDecimal"
                android:id="@+id/longitude_input" />
        </LinearLayout>

        <info.hoang8f.widget.FButton
            android:drawableLeft="@drawable/ic_location"
            android:id="@+id/get_coordinates_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_coordinates"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/Primary"
            fbutton:shadowEnabled="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Or"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:textColor="#ffc1c1c1"
            android:layout_marginTop="5dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_input"
            app:floatingLabel="normal"
            app:floatingLabelText="@string/address_input"
            android:id="@+id/address_text_input" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rangeBar_enable"
                android:layout_marginTop="10dp"
                android:enabled="true"
                android:checked="true"
                android:layout_gravity="bottom" />

            <com.appyvet.rangebar.RangeBar
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rangebar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                custom:tickInterval="5"
                custom:tickEnd="50"
                custom:rangeBar="false"
                custom:selectorColor="@color/Primary"
                custom:pinColor="@color/Primary"
                custom:connectingLineColor="@color/Primary"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="-15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/radius_label"
            android:id="@+id/radius_label"
            android:layout_marginTop="-16dp"
            android:layout_marginLeft="7dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/collumn1">

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/collumn2">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <info.hoang8f.widget.FButton
                android:drawableLeft="@drawable/ic_search"
                android:id="@+id/search_place"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/get_info_from_coordinates"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/Primary"
                fbutton:shadowEnabled="true"
                android:layout_weight="1"
                android:layout_marginRight="10dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
</ScrollView>